--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:14
 
-RUN mkdir -p /usr/src/server
-WORKDIR /usr/src/server
+RUN mkdir -p /app/server
+WORKDIR /app/server
 
-COPY . /usr/src/server
+COPY . /app/server
 RUN npm install
 RUN npm install --global kill-port
